--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     padding:0;
     background-color: rgb(135, 215, 226);}
 
+
 html {scroll-behavior: smooth;}
 
 body {
@@ -24,7 +25,7 @@ background-color: rgb(69, 76, 82)
 }
 
 header h1 {
-    background-color:rgb(183, 75, 48);
+    background-color:rgb(183, 100, 48);
     color:rgb(69, 76, 82);
     padding: 5px, 1%, 5px, 6%;
     margin: 15px;
@@ -32,6 +33,7 @@ header h1 {
     line-height: 1;
 }
 h1 {    
+    background-color:rgb(69, 76, 82);
     display: block;
     font-size: 2em;
     margin-block-start: 0.67em;
@@ -39,27 +41,43 @@ h1 {
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     font-weight: bold;}
-
-.main-nav li {
+nav {
+    color:rgb(183, 75, 48);
+    background-color:  rgb(69, 76, 82);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     display:inline;
     cursor: pointer;
-    background-color: rgb(69, 76, 82);}
+}
 
-.nav-links {
+nav a {
+    text-decoration: none;
+    box-shadow: inset 0 0 0 0 #54b3d6;
     padding: 5px,10px;
     color: rgb(183, 75, 48);
-    font-size: 20px; }
+    font-size: 14px; 
+    background-image: linear-gradient(270deg, var(--secondary) 0%, var(--secondary) 100%);
+    background-repeat: no-repeat;
+    background-size: 100% 0.2em;
+    background-position: bottom;
+    transition: all 0.25s ease-in;
+    transition: color.3s ease-in-out;
+    background-color:rgb(69, 76, 82);}
 
-.nav-links li a:hover{ 
-    background-size: 100% 100%;}
+ nav a:hover{ 
+    background-size: 150% 150%;
+    color:aqua
+    }
+
 
 .hero {
-    background-image: url("https://jimpattersonphotography.com/wordpress/wp-content/gallery/sierra-nevada/cache/Sierra-Nevada-Mountains-Picture-Peak-Sunset.jpg-nggid03302-ngg0dyn-1500x1071x100-00f0w010c010r110f110r010t010.jpg");
+    background-image: url("../portfolio/assests/images/sierra.png");
     background-size: cover;
     background-position:contain;
     min-height: 30vh;
     width: 100%;
-    Height: 300px;
+    Height: 200px;
     padding: 2% 6%;
     display: flex;
     justify-content: flex-end;
