--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ background-color: rgb(69, 76, 82)
 }
 
 header h1 {
-    background-color:rgb(215, 152, 112);
+    background-color:rgb(225, 146, 97);
     color:rgb(69, 76, 82);
     padding: 5px, 1%, 5px, 6%;
     margin: 15px;
@@ -54,13 +54,14 @@ nav a {
     text-decoration: none;
     box-shadow: inset 0 0 0 0 #54b3d6;
     padding: 5px,10px;
-    color: rgb(215, 152, 112);
+    color: rgb(225, 146, 97);
     font-size: 26px; 
     background-image: linear-gradient(270deg, var(--secondary) 0%, var(--secondary) 100%);
     background-repeat: no-repeat;
     background-size: 100% 0.2em;
     background-position: bottom;
-    background-color:rgb(69, 76, 82);}
+    background-color:rgb(69, 76, 82);
+    margin: 10px;}
 
  nav a:hover{ 
     background-size: 150% 150%;
@@ -123,6 +124,9 @@ p {
 }
 
 .contact {
-    display: inline
-    ;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
 }
