--- a/style.css
+++ b/style.css
@@ -41,6 +41,7 @@ h1 {
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     font-weight: bold;}
+
 nav {
     background-color:  rgb(69, 76, 82);
     display: flex;
@@ -83,14 +84,19 @@ nav a {
     text-align: right;
 }
 
+main {
+    margin-top: 20px;
+    margin-bottom: 45px;
+}
+
 .page-wrapper {    
     max-width: 88%;
     margin-left: auto;
     margin-right: auto;}
 
-.content h2 {
+.content > h2 {
     flex: 0 0 20%;
-    text-align: left;
+    text-align: right;
     padding-right: 15px;
     border-right: 4px solid var(--primary);
     font-size: 3vw;
@@ -116,7 +122,7 @@ p {
 
 .content h2 {
     flex: 0 0 20%;
-    text-align: left;
+    text-align: right;
     padding-right: 15px;
     border-right: 4px solid rgb(69, 76, 82);
     font-size: 4vw;
@@ -129,4 +135,20 @@ p {
     justify-content: space-around;
     align-items: center;
     height: 100%;
+}
+
+.contact a {
+    color: rgb(225, 146, 97);
+    padding: 5px;
+    text-decoration: none;
+    font-size: 1.3rem;
+    font-style: normal;
+    background-image: linear-gradient(270deg, var(--primary) 0%, var(--primary) 100%);
+    background-repeat: no-repeat;
+    background-size: 100% 0.2em;
+    background-position: bottom;
+    transition: all 0.25s ease-in;
+    margin: 0 0.2rem 0.1rem;
+    display: inline-block;
+
 }
