--- a/style.css
+++ b/style.css
@@ -94,11 +94,21 @@ main {
     margin-left: auto;
     margin-right: auto;}
 
+.content{
+    margin: 25px 0;
+    padding: 10px 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: space-between;
+  }
+
 .content > h2 {
     flex: 0 0 20%;
     text-align: right;
     padding-right: 15px;
-    border-right: 4px solid var(--primary);
+    border-right: 4px solid  rgb(69, 76, 82);
     font-size: 3vw;
     line-height: 1.1;}
 
@@ -110,6 +120,7 @@ h2 {
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     font-weight: bold;
+    color:  rgb(69, 76, 82);
 }
 .content p {margin: 30px;}
 
@@ -120,15 +131,9 @@ p {
     margin-inline-start: 0px;
     margin-inline-end: 0px;}
 
-.content h2 {
-    flex: 0 0 20%;
-    text-align: right;
-    padding-right: 15px;
-    border-right: 4px solid rgb(69, 76, 82);
-    font-size: 4vw;
-    line-height: 1.1;
-}
-
+.content > div {
+        flex: 0 0 77%;
+    }
 .contact {
     display: flex;
     flex-wrap: wrap;
