--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ p {
     }
 
 .flex-item div {
-        background-color: red;
+        background-color: rgb(34, 95, 34);
         padding: 8px 10px;  
 }
 
@@ -239,3 +239,24 @@ h3 {
 .jay {
     background-image: url("../portfolio/assests/images/jay.jpeg");
 }
+
+@media screen and (max-width: 768px) {
+    .flex-item,
+    .flex-item:first-child {
+      flex-basis: 100%;
+    }
+  
+    .flex-item:first-child {
+      min-height: 150px;
+    }
+  
+    .hero-banner {
+      justify-content: center;
+      text-align: center;
+    }
+  
+    .contact address {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  }
