--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ nav a {
     }
 
 .hero {
-    background-image: url("../portfolio/assests/images/sierra.png");
+    background-image: url("../images/sierra.png");
     background-size: cover;
     background-position:contain;
     min-height: 30vh;
