image file paths

--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ p {
     }
 
 .horiseon {
-        background-image: url("../portfolio/assests/images/digital-marketing-meeting.jpeg");
+        background-image: url("./assests/images/digital-marketing-meeting.jpeg");
         border-radius: 30px;
         background-position: left;
     
@@ -246,25 +246,25 @@ h3 {
 }
 
 .juniper {
-    background-image: url("../portfolio/assests/images/yosemite-np-06.jpeg");
+    background-image: url("./assests/images/yosemite-np-06.jpeg");
     border-radius: 30px;
     background-position: right
 }
 
 .half-dome {
-    background-image: url("../portfolio/assests/images/half-dome.jpeg");
+    background-image: url("./assests/images/half-dome.jpeg");
     border-radius: 30px;
     background-size: cover;
     background-position: 90% 20%;
 }
 
 .sequia {
-    background-image: url("../portfolio/assests/images/sequia.jpeg");
+    background-image: url("./assests/images/sequia.jpeg");
     border-radius: 30px;
 }
 
 .jay {
-    background-image: url("../portfolio/assests/images/jay.jpeg");
+    background-image: url("./assests/images/jay.jpeg");
     border-radius: 30px;
     background-position: 70% 35%;
 }
