--- a/style.css
+++ b/style.css
@@ -123,7 +123,8 @@ h2 {
     color:  rgb(69, 76, 82);
 }
 .page-section p {
-    margin: 30px;
+    margin: 15px;
+    font-size: medium;
 }
 
 .profile {
@@ -141,9 +142,13 @@ p {
     margin-block-end: 1em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-    font-size: 24;
 }
-
+.about p {
+    display:flex;
+    max-width: 1300px;
+    margin-top: 50px;
+    margin-right:3in;
+}
 .page-section > div {
     flex: 0 0 77%}
 
