--- a/style.css
+++ b/style.css
@@ -244,22 +244,18 @@ h3 {
 .contact a {
     color: rgb(69, 76, 82);
     padding: 5px;
-    text-decoration: none;
-    font-size: 1.3rem;
+    text-decoration: underline;
+    font-size: 40px;
     font-style: normal;
-    background-image: linear-gradient(270deg, var(--primary) 0%, var(--primary) 100%);
-    background-repeat: no-repeat;
-    background-size: 100% 0.2em;
-    background-position: bottom;
-    transition: all 0.25s ease-in;
     margin: 0 0.2rem 0.1rem;
-    margin-top: 50px;
+    margin-top: 90px;
     display: inline-block;
     justify-content: center;
     align-content: bottom;
 }
 .contact a:hover{
     cursor:pointer;
+    color:rgb(225, 146, 97);
 }
 
 /* below are the style rules for the remaining background images */ 
