updated work portfolio projects

--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ h3 {
 
 /* below are the style rules for the remaining background images */ 
 .juniper {
-    background-image: url("./assests/images/yosemite-np-06.jpeg");
+    background-image: url("./assests/images/Screen\ Shot\ 2022-11-13\ at\ 5.43.49\ PM.png");
     background-position: right
 }
 
