added project 2 to portfolio

--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ h3 {
 }
 
 .half-dome {
-    background-image: url("./assests/images/half-dome.jpeg");
+    background-image: url("https://www.regionalneurological.com/wp-content/uploads/2020/03/Regional-Neurological_Brain-Science.jpeg");
     background-size: cover;
     background-position: 90% 20%;
 }
